# solana-clawd-ai-training

./: .gitignore  Anchor.toml  Cargo.toml  README.md  STRUCTURE.md  dataset_card.md  model_card.md  onchainai.md  requirements.txt  solana1_yourgpt.jsonl
8bitlabs.ai/: .env.example  404.html  CNAME  README.md  clawd-code.json  clawd-grok.json  core-ai.json  index.html  mesh-router.json  model-kit.html  model-kit.js  package.json  registry.json  robots.txt  script.js  site.webmanifest  sitemap.xml  solana-redpill-verifier.html  styles.css  vercel.json
configs/: glm52_lora_config.yaml  glm52_lora_config_mac.yaml  lora_config.yaml  nvidia_trading_factory_config.yaml  qwen35_fable5_clawd_lora.yaml  qwen35_fable5_clawd_lora_mac.yaml
dao/: DAO_DESIGN.md  register_model.sh  register_model.ts
data/: nvidia_aiq_eval.json  nvidia_trading_factory_dataset_card.md  nvidia_trading_factory_manifest.json  solana_clawd_eval.jsonl  solana_clawd_seed.jsonl
model-kit/: .gitignore  README.md  clawd_model_kit.py  config.example.yaml
nvidia/: NEMOTRON_ULTRA_AGENT.md  README.md  nemotron_ultra_agent.py
ollama/: build_and_push.sh
perps/: README.md  functioncall.py  functions.py  nvidia_perps.py  prompter.py  schema.py
schemas/: ai_training_layout.schema.json
scripts/: add_deepsol_zkr_examples.py  add_v2_examples.py  add_zk_examples.py  after_core_ai_job.sh  after_transaction_foundation_job.sh  auto_research.py  build_core_ai_dataset.py  (+44 more)
trading_factory/clawd-autoresearch-wiki/solana-chat/: .gitignore  README.md  pyproject.toml
trading_factory/clawd-autoresearch-wiki/solana-chat/perps/: functions.py
trading_factory/clawd-autoresearch-wiki/solana-chat/scripts/: prepare_solana_data.py  solana_eval.py
trading_factory/clawd-autoresearch-wiki/solana-chat/solana/: __init__.py  dataset.py  light_protocol.py  nemotron_labeler.py  rpc.py  tasks.py  zk_routing.py
(+159 files in other folders)
